// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput - basic functionality: After gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`MaskedInput - basic functionality: After gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`MaskedInput - basic functionality: Before gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`MaskedInput - basic functionality: Before gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`MaskedInput - basic functionality: Masked input has correct props 1`] = `
Object {
  "aria-describedby": null,
  "aria-invalid": false,
  "aria-label": null,
  "aria-labelledby": null,
  "aria-required": false,
  "autoComplete": "on",
  "autoFocus": false,
  "disabled": false,
  "id": undefined,
  "name": "",
  "onBlur": [Function],
  "onChange": [Function],
  "onFocus": [Function],
  "onKeyDown": [MockFunction],
  "onKeyPress": [MockFunction],
  "onKeyUp": [MockFunction],
  "onMouseDown": [Function],
  "onPaste": [Function],
  "placeholder": "Placeholder",
  "required": false,
  "size": "default",
  "styled-component": "true",
  "type": "text",
  "value": "(123) 456-7890",
}
`;
